Sugestões do PMD.